--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-header />
 <app-user-input (calculate)="calculateResult($event)"/>
-<app-investment-results />
+<app-investment-results [tableData]="result"/>
